transport fee collection

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -33,7 +33,7 @@
       <div id="page-wrapper">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="page-header">{{title}}</h1>
+          <h3 class="page-header">{{title}}</h3>
         </div>
       </div>
       <!-- /.row -->
@@ -474,6 +474,11 @@
           <section data-category="transport-daily-collection-report">
             <div class="col-md-12">
               <transport-daily-collection-report></transport-daily-collection-report>
+            </div>
+          </section>
+          <section data-category="transport-daily-income-report">
+            <div class="col-md-12">
+              <transport-daily-income-report></transport-daily-income-report>
             </div>
           </section>
           <section data-category="transport-pdc-collection-report">
