--- a/app/elements/collection-receipt-datepicker/collection-receipt-datepicker.html
+++ b/app/elements/collection-receipt-datepicker/collection-receipt-datepicker.html
@@ -80,7 +80,8 @@
           localStorage.setItem("curr_sess_date",dat);
           // document.querySelector('collection-fee-entry-card').dateofpayment=this.showdate;
           // document.querySelector('collection-fee-edit-card').dateofpayment=this.showdate;
-          document.querySelector('transport-collection-fee-entry-card').dateofpayment=this.showdate;
+          // document.querySelector('transport-collection-fee-entry-card').dateofpayment=this.showdate;
+          document.querySelector('transport-collection-feecollection-card').dateofpayment=this.showdate;
           document.querySelector('transport-collection-fee-edit-card').dateofpayment=this.showdate;
           // document.querySelector('application-fee-card').dateofpayment=this.showdate;
           // }
