--- a/app/elements/collection-receipt-transaction-datepicker/collection-receipt-transaction-datepicker.html
+++ b/app/elements/collection-receipt-transaction-datepicker/collection-receipt-transaction-datepicker.html
@@ -80,7 +80,8 @@
           // document.querySelector('collection-fee-entry-card').transactiondate=this.showdate;
           // document.querySelector('collection-fee-edit-card').transactiondate=this.showdate;
           // document.querySelector('application-fee-card').transactiondate=this.showdate;
-          document.querySelector('transport-collection-fee-entry-card').transactiondate=this.showdate;
+          // document.querySelector('transport-collection-fee-entry-card').transactiondate=this.showdate;
+          document.querySelector('transport-collection-feecollection-card').transactiondate=this.showdate;
           document.querySelector('transport-collection-fee-edit-card').transactiondate=this.showdate;
           // }
         }
