--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -393,3 +393,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transport-routing-gradewiseroute-report-card/transport-routing-gradewiseroute-report-card.html">
 <link rel="import" href="transport-routing-trip-to-grade/transport-routing-trip-to-grade.html">
 <link rel="import" href="transport-routing-triptograde-display/transport-routing-triptograde-display.html">
+<link rel="import" href="transport-collection-paymentpattern-card/transport-collection-paymentpattern-card.html">
+<link rel="import" href="transport-collection-feecollection-card/transport-collection-feecollection-card.html">
+<link rel="import" href="transport-collection-feecollection-itemcard/transport-collection-feecollection-itemcard.html">
+<link rel="import" href="transport-collection-viewcollectioninfo-delete/transport-collection-viewcollectioninfo-delete.html">
+<link rel="import" href="transport-daily-income-report/transport-daily-income-report.html">
