--- a/app/elements/schooltype-to-grade-displaycard/schooltype-to-grade-displaycard.html
+++ b/app/elements/schooltype-to-grade-displaycard/schooltype-to-grade-displaycard.html
@@ -110,7 +110,7 @@
         document.querySelector('feetype-schedule-card').FnSetGrades(gradearr);
         document.querySelector('rtefeetype-schedule-card').FnSetGrades(gradearr);
         document.querySelector('discount-master-card').FnSetGrades(gradearr);
-        document.querySelector('transport-routing-trip-to-grade').FnSetGrades(allgrades);
+        document.querySelector('transport-routing-trip-to-grade').FnSetGrades(gradearr);
         // document.querySelector('fee-structure-schedulecard').FnSetGrades(gradearr);
       },
       FnRefresh:function(){
